# reward-concentration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  run_benchmark.py
docs/: README.md
docs/development/: correctness.md  testing.md
docs/onboarding/: getting-started.md  glossary.md  workflows.md
docs/pipelines/: experiment-lifecycle.md
docs/reference/: architecture.md  configuration.md  file-reference.md
src/concentration/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  run_logging.py  seeding.py  types.py
src/concentration/data/: __init__.py  preference.py  safety_eval.py
src/concentration/eval/: __init__.py  capability.py  stats.py
src/concentration/models/: __init__.py  policy.py  reward_model.py
src/concentration/tracka/: __init__.py  sft.py
tests/: conftest.py  test_benchmark_runner.py  test_cli.py  test_config.py  test_correctness_tools.py  test_network_guard.py  test_run_logging.py  test_seeding.py  test_types.py
tests/data/: test_preference.py  test_safety_eval.py
tests/eval/: test_capability.py  test_stats.py
tests/models/: test_policy.py  test_reward_model.py
tests/tracka/: test_sft.py
