[project]
name = "research-project-template"
version = "0.1.0"
description = "Correctness-first Python boilerplate for research projects."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [{ name = "Henry Castillo" }]
dependencies = [
    "beartype>=0.22.0",
    "jaxtyping>=0.3.0",
    "numpy>=2.0.0",
    "phantom-types[hypothesis]>=3.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=tests",
    "--cov-report=term-missing",
]
markers = [
    "property: property-based tests powered by Hypothesis",
    "slow: tests that are useful but too expensive for the default suite",
]

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ty]
# Type checker is `ty` from Astral. Run `uv run ty check`.

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = [".venv/", "docs/", "dist/", "build/"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "dist", "build", "out", "outputs", "logs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501", # line too long; formatting and prose readability own this
]

[tool.ruff.lint.isort]
known-first-party = ["tests"]
